--- a/templates/index.html
+++ b/templates/index.html
@@ -106,11 +106,11 @@
         display: none;
       }
     </style>
-    <link rel="stylesheet" href="smart-icons.css">
+    <link rel="stylesheet" href="fxos-tv-icons.css">
   </head>
   <body>
     <input id="show-view-boxes" type="checkbox">
-    <a href="#"><h1>Smart Icons</h1></a>
+    <a href="#"><h1>Firefox OS TV Icons</h1></a>
     <section>
 <% for (var glyphIdx = 0; glyphIdx < glyphs.length; glyphIdx++) { var glyph = glyphs[glyphIdx] %>
       <a href="#<%= glyph %>" id="<%= glyph %>" data-icon="<%= glyph %>"></a>
